kubernetes/traefik/02-traefik-services.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: LoadBalancer
  ports:
    - name: web
      targetPort: web
      port: 80
    - name: websecure
      targetPort: websecure
      port: 443
    - name: dashboard
      targetPort: dashboard
      port: 8080

  selector:
    app: traefik
